--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,7 +9,6 @@ body {
 
 #result, #previous {
     width: 300px;
-    height: 45px;
     padding: 10px;
     margin: 10px 0;
     border: 2px solid #545557;
@@ -18,6 +17,14 @@ body {
     color: #1d1f21;
     text-align: center;
     border-radius: 8px;
+}
+
+#result{
+    height: 45px;
+}
+
+#previous{
+    height: 30px;
 }
 
 .row {
