--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -3,8 +3,14 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    min-height: 95vh;
     background-color: #1d1f21;
+}
+
+.display {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #result, #previous {
