--- a/styles/main.css
+++ b/styles/main.css
@@ -3,6 +3,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     min-height: 95vh;
     background-color: #1d1f21;
     text-align: center;
