Add special footer

--- a/styles/main.css
+++ b/styles/main.css
@@ -86,3 +86,23 @@ button:hover {
     color: #1d1f21;
     background-color: white;
 }
+
+.footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: #1d1f21;
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+    font-size: 10px;
+}
+
+.footer a{
+    text-decoration: none;
+    color: cornflowerblue;
+}
+
+.footer a:hover{
+    text-decoration: underline;
+}
